refactor: add group

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <section class="graphics">
         <div class="close"><p>&#215;</p></div>
     <h1>Try Verv for free</h1>
+    <div class="group">
+        <div class="paragraph">Extr. Obese</div>
+        <div class="paragraph">Obese</div>
+        <div class="paragraph">Overweight</div>
+        <div class="paragraph">Healthy</div>
+    </div>
+
     <img class='graph' src="img/Path%204%20Copy.svg" alt="graph">
     <img class='graph' src="img/Path%204.svg" alt="graph">
     <img class='girl'src="img/Bitmap.svg" alt="girl">
