refactor: add dark theme

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,500;1,100&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,500;1,100&display=swap"
+      rel="stylesheet">
 <body>
-<section class="graphics">
-        <div class="close"><p>&#215;</p></div>
+<section class="graphics light-theme">
+    <div class="close"><p>&#215;</p></div>
     <h1>Try Verv for free</h1>
     <div class="group">
         <div class="paragraph">Extr. Obese</div>
@@ -21,44 +22,50 @@
 
     <img class='graph' src="img/Path%204%20Copy.svg" alt="graph">
     <img class='graph' src="img/Path%204.svg" alt="graph">
-    <img class='girl'src="img/Bitmap.svg" alt="girl">
+    <img class='girl' src="img/Bitmap.svg" alt="girl">
 </section>
 
 <section class="main">
     <div class="container">
         <div class="column _1">
-            <ul>
-                <li class="num">1</li>
-                <li class="month">month</li>
-                <li><span>$</span>14.99 /</li>
-                <li>month</li>
-                <li>month: $14.99</li>
-            </ul>
+            <div class="list">
+                <ul>
+                    <li class="num">1</li>
+                    <li class="month">month</li>
+                    <li class="other"><span>$</span>14.99 /</li>
+                    <li class="other">month</li>
+                    <li class="other">month: $14.99</li>
+                </ul>
+            </div>
         </div>
         <div class="column _2">
             <div class="save"><p>SAVE 80%</p></div>
-            <ul>
-                <li class="num">12</li>
-                <li class="month">months</li>
-                <li><span>$</span>39.99</li>
-                <li>per year</li>
-                <li>month: $3.33</li>
-            </ul>
+            <div class="list two">
+                <ul>
+                    <li class="num">12</li>
+                    <li class="month">months</li>
+                    <li class="other"><span>$</span>39.99</li>
+                    <li class="other">per year</li>
+                    <li class="other">month: $3.33</li>
+                </ul>
+            </div>
         </div>
         <div class="column _3">
             <div class="save _one"><p>SAVE 90%</p></div>
-            <ul>
-                <li class="num">3</li>
-                <li class="month">months</li>
-                <li><span>$</span>29.99 /</li>
-                <li>3 month</li>
-                <li>month: $9.99</li>
-            </ul>
+            <div class="list three">
+                <ul>
+                    <li class="num">3</li>
+                    <li class="month">months</li>
+                    <li class="other"><span>$</span>29.99 /</li>
+                    <li class="other">3 month</li>
+                    <li class="other">month: $9.99</li>
+                </ul>
+            </div>
             <div class="sale"><p>SALE</p></div>
         </div>
     </div>
-    <button class="continue">Continue</button>
-    <p class="billing">Recurring billing. Cancel anytime.</p>
+    <div class="continue">Continue</div>
+    <p class="billing light-theme">Recurring billing. Cancel anytime.</p>
 </section>
 
 <script src="script.js"></script>
