--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,500;1,100&display=swap"
       rel="stylesheet">
 <body>
+
+<button class="slider-prev">Prev</button>
+<button class="slider-next">Next</button>
+
 <section class="graphics light-theme">
-    <div class="close"><p>&#215;</p></div>
+    <div class="theme"><i class="fas fa-moon"></i></div>
     <h1>Try Verv for free</h1>
     <div class="group">
         <div class="paragraph">Extr. Obese</div>
@@ -24,7 +29,54 @@
     <img class='graph' src="img/Path%204.svg" alt="graph">
     <img class='girl' src="img/Bitmap.svg" alt="girl">
 </section>
-
+<div class="overflow">
+    <div class="slider">
+        <div class="slider-line">
+            <div class="slide">
+                <div class="comment">
+                    <div class="slide-title">Fantastic!</div>
+                    <div class="author">lila_lane</div>
+                </div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
+            </div>
+            <div class="slide">
+                <div class="comment">
+                    <div class="slide-title">Fantastic!</div>
+                    <div class="author">lila_lane</div>
+                </div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
+            </div>
+            <div class="slide">
+                <div class="comment">
+                    <div class="slide-title">Fantastic!</div>
+                    <div class="author">lila_lane</div>
+                </div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
+            </div>
+        </div>
+    </div>
+</div>
 <section class="main">
     <div class="container">
         <div class="column _1">
