--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
       rel="stylesheet">
 <body>
 
-<button class="slider-prev">Prev</button>
-<button class="slider-next">Next</button>
-
 <section class="graphics light-theme">
     <div class="theme"><i class="fas fa-moon"></i></div>
+    <div class="theme" style="display: none"><i class="fas fa-sun"></i></div>
     <h1>Try Verv for free</h1>
     <div class="group">
         <div class="paragraph">Extr. Obese</div>
@@ -30,6 +28,10 @@
     <img class='girl' src="img/Bitmap.svg" alt="girl">
 </section>
 <div class="overflow">
+    <div class="buttonCase">
+        <div class="slider-prev"><i class="fas fa-chevron-left"></i></div>
+        <div class="slider-next"><i class="fas fa-chevron-right"></i></div>
+    </div>
     <div class="slider">
         <div class="slider-line">
             <div class="slide">
