refactor: add toggle

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,500;1,100&display=swap"
-      rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,500;1,100&display=swap"rel="stylesheet">
 <body>
-
+<div class="content">
 <section class="graphics light-theme">
     <div class="theme"><i class="fas fa-moon"></i></div>
     <div class="theme" style="display: none"><i class="fas fa-sun"></i></div>
@@ -121,7 +120,7 @@
     <div class="continue">Continue</div>
     <p class="billing light-theme">Recurring billing. Cancel anytime.</p>
 </section>
-
+</div>
 <script src="script.js"></script>
 </body>
 </html>
