fix: channged class name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,500;1,100&display=swap"rel="stylesheet">
 <body>
 <div class="content">
-<section class="graphics light-theme">
+<section class="graphics">
     <div class="theme"><i class="fas fa-moon"></i></div>
     <div class="theme" style="display: none"><i class="fas fa-sun"></i></div>
     <h1>Try Verv for free</h1>
