refactor: first mobile

--- a/index.html
+++ b/index.html
@@ -2,125 +2,134 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,500;1,100&display=swap"rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,500;1,100&display=swap"
+      rel="stylesheet">
 <body>
-<div class="content">
-<section class="graphics">
-    <div class="theme"><i class="fas fa-moon"></i></div>
-    <div class="theme" style="display: none"><i class="fas fa-sun"></i></div>
-    <h1>Try Verv for free</h1>
-    <div class="group">
-        <div class="paragraph">Extr. Obese</div>
-        <div class="paragraph">Obese</div>
-        <div class="paragraph">Overweight</div>
-        <div class="paragraph">Healthy</div>
+<section class="app">
+    <div class="block _bitmap">
+        <img class='graph' src="img/Path%204%20Copy.svg" alt="graph">
+        <img class='graph' src="img/Path%204.svg" alt="graph">
+        <img class='girl' src="img/Bitmap.svg" alt="girl">
+        <div class="container">
+            <div class="theme"><i class="fas fa-moon"></i></div>
+            <div class="theme" style="display: none"><i class="fas fa-sun"></i></div>
+            <h1>Try Verv for free</h1>
+            <div class="group">
+                <div class="paragraph">Extr. Obese</div>
+                <div class="paragraph">Obese</div>
+                <div class="paragraph">Overweight</div>
+                <div class="paragraph">Healthy</div>
+            </div>
+        </div>
+        <div class="buttonCase">
+            <div class="slider-prev"><i class="fas fa-chevron-left"></i></div>
+            <div class="slider-next"><i class="fas fa-chevron-right"></i></div>
+        </div>
+        <div class="overflow">
+            <div class="slider">
+                <div class="slider-line">
+                    <div class="slide">
+                        <div class="comment">
+                            <div class="slide-title">Fantastic!</div>
+                            <div class="author">lila_lane</div>
+                        </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
+                    </div>
+                    <div class="slide">
+                        <div class="comment">
+                            <div class="slide-title">Fantastic!</div>
+                            <div class="author">lila_lane</div>
+                        </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
+                    </div>
+                    <div class="slide">
+                        <div class="comment">
+                            <div class="slide-title">Fantastic!</div>
+                            <div class="author">lila_lane</div>
+                        </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <img class='graph' src="img/Path%204%20Copy.svg" alt="graph">
-    <img class='graph' src="img/Path%204.svg" alt="graph">
-    <img class='girl' src="img/Bitmap.svg" alt="girl">
+    <div class="block _product _light">
+        <div class="container">
+            <div class="product">
+                <div class="column _1">
+                    <div class="list _one">
+                        <ul>
+                            <li class="num">1</li>
+                            <li class="month">month</li>
+                            <li class="other"><span>$</span>14.99 /</li>
+                            <li class="other">month</li>
+                            <li class="other">month: $14.99</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="column _2">
+                    <div class="save"><p>SAVE 80%</p></div>
+                    <div class="list _two">
+                        <ul>
+                            <li class="num">12</li>
+                            <li class="month">months</li>
+                            <li class="other"><span>$</span>39.99</li>
+                            <li class="other">per year</li>
+                            <li class="other">month: $3.33</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="column _3">
+                    <div class="save _one"><p>SAVE 90%</p></div>
+                    <div class="list _three">
+                        <ul>
+                            <li class="num">3</li>
+                            <li class="month">months</li>
+                            <li class="other"><span>$</span>29.99 /</li>
+                            <li class="other">3 month</li>
+                            <li class="other">month: $9.99</li>
+                        </ul>
+                    </div>
+                    <div class="sale"><p>SALE</p></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="block _continue _light">
+        <div class="container">
+            <div class="continue">Continue</div>
+            <p class="billing light-theme">Recurring billing. Cancel anytime.</p>
+        </div>
+    </div>
 </section>
-<div class="overflow">
-    <div class="buttonCase">
-        <div class="slider-prev"><i class="fas fa-chevron-left"></i></div>
-        <div class="slider-next"><i class="fas fa-chevron-right"></i></div>
-    </div>
-    <div class="slider">
-        <div class="slider-line">
-            <div class="slide">
-                <div class="comment">
-                    <div class="slide-title">Fantastic!</div>
-                    <div class="author">lila_lane</div>
-                </div>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
-            </div>
-            <div class="slide">
-                <div class="comment">
-                    <div class="slide-title">Fantastic!</div>
-                    <div class="author">lila_lane</div>
-                </div>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
-            </div>
-            <div class="slide">
-                <div class="comment">
-                    <div class="slide-title">Fantastic!</div>
-                    <div class="author">lila_lane</div>
-                </div>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
-            </div>
-        </div>
-    </div>
-</div>
-<section class="main">
-    <div class="container">
-        <div class="column _1">
-            <div class="list">
-                <ul>
-                    <li class="num">1</li>
-                    <li class="month">month</li>
-                    <li class="other"><span>$</span>14.99 /</li>
-                    <li class="other">month</li>
-                    <li class="other">month: $14.99</li>
-                </ul>
-            </div>
-        </div>
-        <div class="column _2">
-            <div class="save"><p>SAVE 80%</p></div>
-            <div class="list two">
-                <ul>
-                    <li class="num">12</li>
-                    <li class="month">months</li>
-                    <li class="other"><span>$</span>39.99</li>
-                    <li class="other">per year</li>
-                    <li class="other">month: $3.33</li>
-                </ul>
-            </div>
-        </div>
-        <div class="column _3">
-            <div class="save _one"><p>SAVE 90%</p></div>
-            <div class="list three">
-                <ul>
-                    <li class="num">3</li>
-                    <li class="month">months</li>
-                    <li class="other"><span>$</span>29.99 /</li>
-                    <li class="other">3 month</li>
-                    <li class="other">month: $9.99</li>
-                </ul>
-            </div>
-            <div class="sale"><p>SALE</p></div>
-        </div>
-    </div>
-    <div class="continue">Continue</div>
-    <p class="billing light-theme">Recurring billing. Cancel anytime.</p>
-</section>
-</div>
 <script src="script.js"></script>
 </body>
 </html>
