--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,500;1,100&display=swap"
-      rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,500;1,100&display=swap" rel="stylesheet">
 <body>
 <section class="app">
     <div class="block _bitmap">
         <img class='graph' src="img/Path%204%20Copy.svg" alt="graph">
         <img class='graph' src="img/Path%204.svg" alt="graph">
+        <img class="dot" src="img/Dot.svg" alt="dot">
+        <img class="dot_2" src="img/Dot.svg" alt="dot">
+        <img class="pro" src="img/PRO.svg" alt="pro">
+        <img class="free" src="img/Free.svg" alt="free">
         <img class='girl' src="img/Bitmap.svg" alt="girl">
         <div class="container">
             <div class="theme"><i class="fas fa-moon"></i></div>
