refactor: add button continue functionality

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="product">
                 <div class="column _1">
-                    <div class="list _one">
+                    <div class="list _one" data-list="q=1">
                         <ul>
                             <li class="num">1</li>
                             <li class="month">month</li>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="column _2">
                     <div class="save"><p>SAVE 80%</p></div>
-                    <div class="list _two">
+                    <div class="list _two" data-list="q=2">
                         <ul>
                             <li class="num">12</li>
                             <li class="month">months</li>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="column _3">
                     <div class="save _one"><p>SAVE 90%</p></div>
-                    <div class="list _three">
+                    <div class="list _three" data-list="q=3">
                         <ul>
                             <li class="num">3</li>
                             <li class="month">months</li>
