refactor: add SFPro fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Test</title>
 </head>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="fonts/SF-Pro/stylesheet.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
