fix: slider automove

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="overflow">
             <div class="slider">
                 <div class="slider-line">
-                    <div class="slide">
+                    <div class="slide __one">
                         <div class="comment">
                             <div class="slide-title">Fantastic!</div>
                             <div class="author">lila_lane</div>
@@ -53,7 +53,7 @@
                         </div>
                         <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
                     </div>
-                    <div class="slide">
+                    <div class="slide __two">
                         <div class="comment">
                             <div class="slide-title">Fantastic!</div>
                             <div class="author">lila_lane</div>
@@ -67,7 +67,7 @@
                         </div>
                         <div class="slide-comment">I can say I am 💯 happy with this app. 15 pounds off in 30 days!</div>
                     </div>
-                    <div class="slide">
+                    <div class="slide __three">
                         <div class="comment">
                             <div class="slide-title">Fantastic!</div>
                             <div class="author">lila_lane</div>
