refactor: style for iPhone X

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
 <section class="app">
     <div class="block _bitmap">
-        <img class='graph' src="img/Path%204%20Copy.svg" alt="graph">
-        <img class='graph' src="img/Path%204.svg" alt="graph">
-        <img class="dot" src="img/Dot.svg" alt="dot">
-        <img class="dot_2" src="img/Dot.svg" alt="dot">
-        <img class="pro" src="img/PRO.svg" alt="pro">
-        <img class="free" src="img/Free.svg" alt="free">
-        <img class='girl' src="img/Bitmap.svg" alt="girl">
+        <img class='graph' src="img/iPhone%20X/Path%204%20Copy.svg" alt="graph">
+        <img class='graph' src="img/iPhone%20X/Path%204.svg" alt="graph">
+        <img class="dot" src="img/iPhone%20X/Dot.svg" alt="dot">
+        <img class="dot_2" src="img/iPhone%20X/Dot.svg" alt="dot">
+        <img class="pro" src="img/iPhone%20X/PRO.svg" alt="pro">
+        <img class="free" src="img/iPhone%20X/Free.svg" alt="free">
+        <img class='girl' src="img/iPhone%20X/Bitmap.svg" alt="girl">
         <div class="container">
             <div class="theme"><i class="fas fa-moon"></i></div>
             <div class="theme" style="display: none"><i class="fas fa-sun"></i></div>
