refactor: style for iPhone SE

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div class="block _bitmap">
         <img class='graph' src="img/iPhone%20X/Path%204%20Copy.svg" alt="graph">
         <img class='graph' src="img/iPhone%20X/Path%204.svg" alt="graph">
+        <img class='graph' style="display: none" src="img/iPhone%20SE/Path%204%20Copy.svg" alt="graph">
+        <img class='graph' style="display: none" src="img/iPhone%20SE/Path%204.svg" alt="graph">
         <img class="dot" src="img/iPhone%20X/Dot.svg" alt="dot">
         <img class="dot_2" src="img/iPhone%20X/Dot.svg" alt="dot">
         <img class="pro" src="img/iPhone%20X/PRO.svg" alt="pro">
@@ -95,7 +97,7 @@
                             <li class="month">month</li>
                             <li class="other"><span>$</span>14.99 /</li>
                             <li class="other">month</li>
-                            <li class="other">month: $14.99</li>
+                            <li class="other _month">month: $14.99</li>
                         </ul>
                     </div>
                 </div>
@@ -107,7 +109,7 @@
                             <li class="month">months</li>
                             <li class="other"><span>$</span>39.99</li>
                             <li class="other">per year</li>
-                            <li class="other">month: $3.33</li>
+                            <li class="other _month">month: $3.33</li>
                         </ul>
                     </div>
                 </div>
@@ -119,7 +121,7 @@
                             <li class="month">months</li>
                             <li class="other"><span>$</span>29.99 /</li>
                             <li class="other">3 month</li>
-                            <li class="other">month: $9.99</li>
+                            <li class="other _month">month: $9.99</li>
                         </ul>
                     </div>
                     <div class="sale"><p>SALE</p></div>
