refactor: style for iPhone SE

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 <body>
 <section class="app">
     <div class="block _bitmap">
-        <img class='graph' src="img/iPhone%20X/Path%204%20Copy.svg" alt="graph">
-        <img class='graph' src="img/iPhone%20X/Path%204.svg" alt="graph">
-        <img class='graph' style="display: none" src="img/iPhone%20SE/Path%204%20Copy.svg" alt="graph">
-        <img class='graph' style="display: none" src="img/iPhone%20SE/Path%204.svg" alt="graph">
+        <img class='graph _first' src="img/iPhone%20X/Path%204%20Copy.svg" alt="graph">
+        <img class='graph _second' src="img/iPhone%20X/Path%204.svg" alt="graph">
         <img class="dot" src="img/iPhone%20X/Dot.svg" alt="dot">
         <img class="dot_2" src="img/iPhone%20X/Dot.svg" alt="dot">
         <img class="pro" src="img/iPhone%20X/PRO.svg" alt="pro">
