--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="theme" style="display: none"><i class="fas fa-sun"></i></div>
             <h1>Try Verv for free</h1>
             <div class="group">
-                <div class="paragraph">Extr. Obese</div>
+                <div class="paragraph _firstLine">Extr. Obese</div>
                 <div class="paragraph">Obese</div>
                 <div class="paragraph">Overweight</div>
                 <div class="paragraph">Healthy</div>
